--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="my.edu.tarc.sciencepark">
 
     <application
+        android:name="android.support.multidex.MultiDexApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -20,6 +21,7 @@
         <activity android:name=".FoodDetail" />
         <activity android:name=".OrderStatus"></activity>
         <activity android:name=".RestaurantList" />
+        <activity android:name=".MainMenu" />
     </application>
 
 
